# hypermodern-radifar

./: LICENSE  README.md  pyproject.toml
src/hypermodern_radifar/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
