[tool.poetry]
name = "hypermodern-radifar"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["radifar <m.radifar05@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"
homepage = "https://github.com/radifar/hypermodern-radifar"
repository = "https://github.com/radifar/hypermodern-radifar"
keywords = ["hypermodern"]

[tool.poetry.scripts]
hypermodern-radifar = "hypermodern_radifar.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
