[tool.poetry]
name = "hypermodern-radifar"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["radifar <m.radifar05@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"
homepage = "https://github.com/radifar/hypermodern-radifar"
repository = "https://github.com/radifar/hypermodern-radifar"
keywords = ["hypermodern"]

[tool.poetry.scripts]
hypermodern-radifar = "hypermodern_radifar.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_radifar"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
